--- a/index.css
+++ b/index.css
@@ -1,50 +1,92 @@
 
-
-}
+     
 body {
-    display:flex
+    display:flex;
      flex-direction: column;
      justify-content: space-between;
      min-height: 100vh;
      min-height: 100svh;
      min-height: -webkit-fill-available;
      margin: 0px;
-     font-family: georgia, Times New Roman, Times, serif 
-     background-color: rgb(223, 215, 193);
+     font-family:  georgia, Times New Roman, Times, serif ;
+     background-color: rgb(161, 164, 199)
+     
 }
  #superiror {
     display: flex;
     height: 8vmax;
     justify-content: center;
     align-items: center;
-    font-zize: 4vmax;
-    color: white;
-    background-color:rgb(206, 193, 226)
-
-#seccio_1
-    display: flex
+    font-Size: 4vmax;
+    color: rgb(171, 157, 175);
+    background-color:rgb(163, 167, 204);
+ }
+#seccio_1 {
+    display: flex;
     justify-content: center;
     align-items: center;
     font-size:4vmax;
-    color: white;
-    backgron 
-   
- #seccio_2
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    font-size:4vmax;
-    color: white
-   
- #seccio_3
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    font-size:4vmax;
-    color: white 
-    background-color ;
-    {
-    #menu{
-        height:Bvmax;
+    color: rgb(0, 0, 0);
+    background-color:rgb(233, 227, 144);
 
+}   
+ #seccio_2 {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:4vmax;
+    color: rgb(0, 0, 0);
+    background-color:rgb(180, 136, 140);
+}  
+ #seccio_3 {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:4vmax;
+    color: rgb(0, 0, 0) ;
+    background-color:rgb(218, 194, 207);
+ }
+    #seccio_4 {
+        display:flex;
+        justify-content: center;
+        align-items:center;
+        font-size:4vmax;
+        color: rgb(0, 0, 0) ;
+        background-color:rgb(233, 227, 144);
+       
+   
+}
+
+
+#menu  {
+        display: flex; 
+        height: 8vmax;
+        }
+#menu i{
+        flex: 1; 
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #950E17;
+        font-size: 5vmax;
+        cursor: pointer; 
+        }
+
+@media (orientation: landscape) {
+    body {
+    
+    flex-direction: row; /* sobreescriu la declaració flex-direction:column; */
+    
+    flex-flow: row-reverse; /* disposició de dreta a esquerra, per mostrar el menú a l'esquerra */
+    }
+    #superior {
+    
+    display: none; /* franja superior oculta per optimitzar l'espai*/
+    }
+    #menu {
+    flex-direction: column;
+    width: 8vmax;
+    height: auto; /* sobreescriu la declaració height: 8vmax; */
+    }
     }
